Test warning for storage space allocation

--- a/schedule/yam/agama.yaml
+++ b/schedule/yam/agama.yaml
@@ -5,6 +5,7 @@ description: >
 schedule:
   - yam/agama/boot_agama
   - yam/agama/agama_arrange
+  - yam/agama/import_agama_profile
   - yam/agama/patch_agama_tests
   - yam/agama/agama
   - installation/grub_test
