Debug grub missing issue

--- a/schedule/yam/agama_cli.yaml
+++ b/schedule/yam/agama_cli.yaml
@@ -17,3 +17,4 @@ schedule:
   - yam/validate/validate_snapshots
   - yam/validate/validate_registered_products
   - console/validate_repos
+  - console/supportutils 
